# 20260515-notion-ai-local-control

./: .gitignore  AI_TOOL_USAGE.md  ASK_FLOW_REFACTOR.md  AX_ELEMENTS.md  CDP_OPTIMIZATION_PLAN.md  HANDOFF.md  PROBLEM_SOLUTIONS.md  PROJECT.md  README.md  ask_and_copy_reply.py  check_ai_state.py  click_element.py  copy_reply.py  focus_element.py  input_box.py  model_selector.py  notion_ax.py  open_ai_window.py  pyproject.toml  search_element.py  test_input_via_tab.py  type_text.py  watch_focus.py  watch_state.py
docs/: AI_TOOL_USAGE.md  ASK_FLOW_REFACTOR.md  AX_ELEMENTS.md  CDP_BETA_HANDOFF.md  LOCKSCREEN_QUICK_SEARCH_RESEARCH.md  PROBLEM_SOLUTIONS.md  SESSION_HANDOFF.md
src/notion_ai_local_control/: __init__.py  ask_and_copy_reply.py  ask_cdp.py  ask_flow.py  attachment_flow.py  beta_cdp_input.py  check_ai_state.py  cli.py  click_element.py  conversation_actions.py  focus_element.py  generation_wait.py  input_box.py  model_selector.py  open_ai_window.py  reply_copy.py  search_element.py  start_cdp.py  tab_bar_cdp.py  watch_focus.py  watch_state.py
