[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "notion-ai-local-control"
version = "0.1.0"
description = "Local macOS Accessibility control helpers for Notion AI."
requires-python = ">=3.12"

[project.scripts]
notion-ai = "notion_ai_local_control.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
